[JPA][Cedric-Janelle] feature: Implemented the company repository